# rust-dynamodb-sample

./: Cargo.toml  README.md  docker-compose.yml
docker/dynamodb/: shared-local-instance.db
src/: main.rs
