[package]
name = "rust-dynamodb-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-config = "1.7.0"
aws-sdk-dynamodb = "1.16.0"
tokio = { version = "1.36.0", features = ["full"] }
serde = {version = "1.0.197", features = ["derive"]}
serde_dynamo = { version = "4.2.13", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.114"
derive-new = "0.6.0"